tests/NormalTests/paczka1/fuzzy1/80987415.err
Error in line 6: A4 A179 86,8
Error in line 7: A4 A179 371,5
Error in line 8: D1Bmb A179 72,7
Error in line 15: A4 A423 50,1
Error in line 16: A4 A423 181,9
Error in line 21: A4 A423 30,3
Error in line 19: Lg00V3Ei47Q A4 19,7
Error in line 26: 5mrgg Ao79 58,5
Error in line 17: D1Bmb A732 72,8
Error in line 29: 5mrgg A179 160,9
Error in line 33: A4 A423 98,8
